--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Cortex Debug",
             "cwd": "${workspaceFolder}",
-            "executable": "${workspaceFolder}/src_4_bare_example/main.elf",
+            "executable": "${workspaceFolder}/src_5_bss/main.elf",
             "request": "launch",
             "type": "cortex-debug",
             // stop at first CPU instruction
@@ -20,7 +20,7 @@
                 "target/stm32g0x.cfg"
             ],
             "preLaunchCommands": [
-                "monitor program ${workspaceFolder}/src_4_bare_example/main.elf verify reset"
+                "monitor program ${workspaceFolder}/src_5_bss/main.elf verify reset"
             ],
             "internalConsoleOptions": "neverOpen",
         }
